
import "stage.proto";
import "common.proto";

//请求关卡信息返回 command:901
message StageInfoResponse{
	repeated Stage stage = 1;
	required int32 elite_stage_times = 2;
	optional int32 act_stage_times = 3; //过期字段
	optional int32 plot_chapter = 4;  //显示剧情章节
	optional int32 act_coin_stage_times = 5; //活动宝库
	optional int32 act_exp_stage_times = 6;  //活动校场
    repeated StageLuckyHeroItems stage_lucky_hero = 7; //活动关卡幸运武将
    repeated int32 already_look_hide_stage = 8; //活动关卡幸运武将
    optional int32 elite_stage_reset_times = 9; //精英关卡重置次数
}

//请求章节奖励信息返回 command:902
message ChapterInfoResponse{
	repeated StageAward stage_award = 1;
}

//更新显示剧情章节 command:912
message UpdataPlotChapterResponse{
    required CommonResponse res = 1;
}

// 进入关卡战斗返回 command:903
message StageStartResponse{
	required CommonResponse res = 1;
	optional int32 drop_num = 2;  //掉落数量
	repeated BattleUnit red = 4; //红方数据 自己
	repeated BattleUnitGrop blue = 5; //对方数据
	optional BattleUnit friend = 6; // 好友
	optional int32 hero_unpar = 7; // 无双
	optional int32 hero_unpar_level = 8; // 无双
	optional int32 monster_unpar = 9; // 怪物无双
	optional BattleUnit replace = 10; // 乱入
	optional int32 replace_no = 11;
	repeated BattleUnit awake = 12; //
	repeated int32 awake_no = 13;
	optional int32 seed1= 14;
	optional int32 seed2= 15;
    optional GameResourcesResponse consume = 16;
}

// 关卡结算返回 command:904
message StageSettlementResponse{
    required CommonResponse res = 1;
	optional GameResourcesResponse drops = 2;
    optional int32 hjqy_stage_id = 3; //黄巾起义关卡id
    optional int32 star_num = 4; //星星数
    optional bool battle_res = 5; //战斗结果  精英关卡
    optional GameResourcesResponse consume = 6;
}

// 请求队形信息: 905
message FormationResponse{
	repeated int32 lineup = 1; // 队形
}

// 请求无双信息：906
message UnparalleledResponse{
	repeated Unparalleled unpar =  1; //无双信息
}

// 关卡扫荡返回 command:907
message StageSweepResponse{
    required CommonResponse res = 1;
	repeated GameResourcesResponse drops = 2;
    optional GameResourcesResponse consume = 3;
    optional int32 hjqy_stage_id = 4;//黄巾起义关卡id
}

//重置关卡挑战次数 command:908
message ResetStageResponse{
    required CommonResponse res = 1;
}

message StarAwardResponse{
    required CommonResponse res = 1;
    optional GameResourcesResponse drops = 2;
    optional int32 gift_id = 3;
}

// 1810
message OpenStageChestResponse{
    required CommonResponse res = 1;
    optional GameResourcesResponse drops = 2;
}

// 1828
message GetStarRandomResponse{
    required CommonResponse res = 1;
    optional int32 random_num = 2;
}

// 1829
message DealRandomResponse{
    required CommonResponse res = 1;
    optional GameResourcesResponse drops = 2;
}

//更新显示剧情章节 command:1930
message UpdataChapterPromptResponse{
    required CommonResponse res = 1;
}

// 1841
message LookHideStageResponse
{
    required CommonResponse res = 1;
}

// 1845
message EliteStageTimesResetResponse
{
    required CommonResponse res = 1;
}
